# MV-OpenCV

./: .gitignore  README.MD
OpenCV voorbeeld/: CMakeCache.txt  Makefile  cmake_install.cmake  opencv
OpenCV-opd1/: main.cpp
OpenCV-opd6/: CMakeLists.txt  Makefile  main.cpp  opencv
OpenCV-opd7/: Makefile  main.cpp  opencv
OpenCV-opd8/: Makefile  main.cpp  opencv
OpenCV-opd9/: Makefile  main.cpp
StackExample/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  opencv
